--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="fireball">Fireball</button>
+    <button id="sword">Sword</button>
+    <button id="next">Next</button>
     <script src="main.js"></script>
   </body>
 </html>
