recent turn activity messege box
I've added : Visual utilities; async functions to write and erase the activity log from recent combat turn. 
Object constructors for game characters and skill moves 

edited: attack function, changing it to async and adding the text box updating feature to it

--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
   </head>
   <body>
+
+    <div id="messege_box">
+      
+      <h1 id="move_counter">Move <span id="actual_move">0</span></h1>
+      <p id="live_action_messege">SOMETHING</p>
+     
+
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
