added health bars

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
       <p id="live_action_messege">SOMETHING</p>
     </div>
 
+    <p>Hero HP:</p>
+    <div class="health-bar-player">
+      <div class="health-bar-value">100%</div>
+      <div class="health-bar-fill"></div>
+    </div>
+    
+    <p>Bad Guy HP:</p>
+    <div class="health-bar-enemy">
+      <div class="health-bar-value">100%</div>
+      <div class="health-bar-fill"></div>
+    </div>
+
     <div id="actionButtons">
       <button class="btn">Button</button>
     </div>
