--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   </head>
   <body>
     <div id="messege_box">
-      <h1 id="move_counter">Move <span id="actual_move">0</span></h1>
-      <p id="live_action_messege">SOMETHING</p>
+      <h1 id="move_counter">Round <span id="actual_move">0</span></h1>
+      <p id="live_action_messege"></p>
     </div>
 
     <div id="actionButtons">
       <button class="btn">Button</button>
     </div>
+
     <script src="main.js"></script>
   </body>
 </html>
