added combat log

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <button class="btn">Button</button>
     </div>
 
+    <div id="combatLogArea"></div>
+
     <script src="main.js"></script>
   </body>
 </html>
