fixed some formatting in the code

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div>
         <p>Hero HP:</p>
         <div class="health-bar-player">
-          <div class="health-bar-value">100%</div>
+          <div class="health-bar-value"></div>
           <div class="health-bar-fill"></div>
         </div>
       </div>
       <div>
         <p>Bad Guy HP:</p>
         <div class="health-bar-enemy">
-          <div class="health-bar-value">100%</div>
+          <div class="health-bar-value"></div>
           <div class="health-bar-fill"></div>
         </div>
       </div>
