added responsiveness to the desktop version

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!--<div class="content-desktop">-->
     <div class="grid-container">
       <div class="game-console-container">
         <h2>Hero</h2>
@@ -22,7 +23,7 @@
             <div id="actionButtons">
               <button class="btn">Button</button>
             </div>
-      </div> 
+      </div>  
     
       <div class="combat-field-container">
         <div class="hp-container-enemy">
@@ -46,6 +47,9 @@
         </div>
       </div>
     </div>
+  <!--</div>-->
+
+  
     <script src="main.js"></script>
   </body>
 </html>
