routing done, started stiching the story

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           </div>
         </div>
 
-        <div class="enemy-character-container">
-          <!-- Instert player character model here -->
+        <div id="enemy-combat" class="enemy-character-container">
+          <!-- Instert enemy character model here -->
         </div>
 
         <div class="player-character-container">
