added mana bar for the player

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
               <div class="health-bar-value"></div>
               <div class="health-bar-fill"></div>
             </div>
+            <div class="mana-bar-player">
+              <div class="mana-bar-value"></div>
+              <div class="mana-bar-fill"></div>
+            </div>
           </div>
         </div>
 
