--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>PokeDex RPG</title>
   </head>
   <body>
     <div class="content-desktop">
@@ -36,7 +36,7 @@
           </div>
         </div>
 
-        <div id="enemy-combat" class="enemy-character-container">
+        <div class="enemy-character-container">
           <!-- Instert enemy character model here -->
         </div>
 
@@ -59,9 +59,7 @@
       </div>
     </div>
 
-    <a href="/mummy" class="nav-link" data-link>Test link</a>
-
-    <script src="main.js"></script>
+    <!-- <script type="module" src="main.js"></script> -->
     <script type="module" src="./frontend/static/js/index.js"></script>
   </body>
 </html>
