--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="grid-container">
         <div class="player-info-container">
           <!-- Instert player info container here -->
-          <h2>Hero</h2>
+          <h2 id="hero-name">Hero</h2>
           <div class="hp-container-player">
             <div class="health-bar-player">
               <div class="health-bar-value"></div>
@@ -33,7 +33,7 @@
 
         <div class="enemy-info-container">
           <!-- Instert enemy info container here -->
-          <h2>Bad Guy</h2>
+          <h2 id="enemy-name">Bad Guy</h2>
           <div class="health-bar-enemy">
             <div class="health-bar-value"></div>
             <div class="health-bar-fill"></div>
